--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   <script>
     /* ====== CONFIG ====== */
     const GOOGLE_CLIENT_ID = "690765229829-6m73boc7cn4lhkvjel8aa2vo96e83f0t.apps.googleusercontent.com";
-    const API = "https://script.google.com/macros/s/AKfycbyOtpcY1OIyDxbbsyaMJHnkeSjzjD54MG1lM7nqAGQzuc_0kmCRNCAFe_2WZUc1xQrL/exec";
+    const API = "https://script.googleusercontent.com/macros/echo?user_content_key=AY5xjrQECihV3Ai1WremzIBEs8fF7DpOa89vP0XYnwXBL0fxr3AH3PaZgPi823TJp5qY9ZdM1eE8Bzm5AcuPY9dvLFQA1EvwoUZnIjFZI174wp5hGb8BfFzxLN0HGCBlfDyVdkN0ettZvdhRggb3wvSisthFFMqVEFXtpbcTMAD9S7fCIe71OqBii4iM08Gy5utyTdzgLAZ1NdxSxWbPyRjgYY94JhKeiSQSs61HM99Ot03fPib_ITXlNTeaTlCiiqkY4L9pcfxON8c13fhD9RwPSPZmWYScsA&lib=MUrxZm6e_GZu_nx92INa1hxWMXI2VoG64";
     const LS_KEY = "cs_portail_email_v1";
 
     /* ====== DOM ====== */
